replace Array::asList with List::of